# xcube-cci-metadata-builder

./: .gitignore  CHANGES.md  README.md  pyproject.toml
ect-e2e/testing-cci-datasets/: cci_gdf_tester.py  generate_summary.py  test_cci_data_support.py
src/xcube_cci_metadata_builder/: __init__.py  build_descriptors.py  build_info.py  cli.py  constants.py  descriptors.py  jsonio.py  kerchunk_descriptors.py  kerchunk_refs.py  registry_build.py  registry_render.py  result_store.py  run_state_checks.py  state_checks.py  state_merge.py  state_render.py  validation.py  version.py
src/xcube_cci_metadata_builder/data/: catalog_urls.json  zarr_to_dsrids
tests/: test_build_descriptors.py  test_build_info.py  test_cli.py  test_descriptors.py  test_kerchunk_descriptors.py  test_kerchunk_refs.py  test_registry_build.py  test_registry_render.py  test_result_store.py  test_run_state_checks.py  test_state_checks.py  test_state_merge.py  test_state_render.py  test_validation.py  test_zarr_registry.py
