[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xcube-cci-metadata-builder"
version = "0.1.0"
description = "Build metadata artifacts for xcube-cci-registry"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "esa-climate-toolbox",
    "xcube",
    "xcube-cci",
]

[project.scripts]
xcube-cci-metadata-builder = "xcube_cci_metadata_builder.cli:main"
cci-meta = "xcube_cci_metadata_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xcube_cci_metadata_builder = ["data/*"]
