[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xcube-cci-metadata-builder"
dynamic = ["version"]
description = "Build metadata artifacts for xcube-cci-registry"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "esa-climate-toolbox",
    "jsonschema>=4.18",
    "referencing>=0.28",
    "xcube",
    "xcube-cci",
]

[project.scripts]
xcube-cci-metadata-builder = "xcube_cci_metadata_builder.cli:main"
cci-meta = "xcube_cci_metadata_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "xcube_cci_metadata_builder.version.__version__"}

[tool.setuptools.package-data]
xcube_cci_metadata_builder = ["data/*"]
